Login text and Background color change

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -3,7 +3,8 @@
 @import url(https://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css);
 
 body {
-    background: #daecf6;
+    background: #ffd966;
+    /* background: #ffd966; */
     /* text-align: center; */
 }
 
