--- a/src/css/App.css
+++ b/src/css/App.css
@@ -3,8 +3,8 @@
 @import url(https://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css);
 
 body {
-    background: #ffd966;
-    /* background: #ffd966; */
+    background: #DAECF6
+    /* background: #DAECF6 */
     /* text-align: center; */
 }
 
