chnaging BG color

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -3,7 +3,7 @@
 @import url(https://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css);
 
 body {
-    background: #DAECF6
+    background: #ffd966;
     /* background: #DAECF6 */
     /* text-align: center; */
 }
